tests/fixtures/syntax/invalid/document_file_nested_document.repor
# Document blocks do not nest, so a document block inside a document block
# fails at parse time.
document file {
  document file {
    title "nested"
  }
}
